umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@ions_mn+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: ions
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: Valence ambiguous for atom Mn at index 0 has 2 valence matches
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "{Mn+3/2}"
    bonds: []
